# preppers-brainstorm-repo

./: .gitignore  CMakeLists.txt  README.md
resources/scripts/: createLuaTableOfNames.py  names.lua  names.xlsx  professions.lua  traits.lua
src/: CMakeLists.txt  Directories.h  main.cpp
src/common/: Attribute.h  AttributeContainer.h  AttributeIncludes.h  AttributeMap.h  AttributeModifier.h  AttributeVector.h  CMakeLists.txt  DebugLine.cpp  DebugLine.h  DiscreteDistribution.cpp  DiscreteDistribution.h  Interval.h  LimitedValue.h  Logger.cpp  Logger.h  Map.h  ObjectPool.h  ValueField.cpp  ValueField.h
src/engine/: CMakeLists.txt  Node.cpp  Node.h  SceneManager.h  Service.h  ServiceLocator.cpp  ServiceLocator.h  Window.cpp  Window.h
src/engine/gui/: CMakeLists.txt  Widget.cpp  Widget.h
src/lua/: LuaIncludes.h
src/messaging/: IMessageIO.h  Message.h
src/scripts/: names.lua  traits.lua
src/world/: Attribute.h  AttributeModifier.h  Attributes.h  CMakeLists.txt  Card.h  Modifier.cpp  Modifier.h  UnitState.cpp  UnitState.h
src/worldsim/: Actor.cpp  Actor.h  Attribute.h  AttributeContainer.h  AttributeModifier.h  Attributes.h  Body.cpp  Body.h  BodyPart.cpp  BodyPart.h  CMakeLists.txt  Card.cpp  Card.h  DamageDescriptor.cpp  DamageDescriptor.h  Damageable.cpp  Damageable.h  Description.cpp  Description.h  Person.cpp  Person.h  Personality.h  Trait.cpp  Trait.h  TraitAtlas.cpp  TraitAtlas.h  WorldNode.h  WorldsimCharacter.cpp  WorldsimCharacter.h  WorldsimParty.cpp  WorldsimParty.h
test/: CMakeLists.txt  trivialTest.cpp
test/common/: TestAttribute.cpp  TestAttribute.h  TestAttribute2.cpp  TestDiscreteDistribution.cpp  TestInterval.cpp  TestLimitedValue.cpp  TestObjectPool.cpp
test/game/: TestActor.cpp  TestAttribute.cpp  TestAttribute.h  TestBody.cpp  TestDamageable.cpp  TestPerson.cpp  TestUnitState.cpp  TestUnitState.h  TestWorldsimCharacter.cpp  TestWorldsimCharacter.h  TestWorldsimParty.cpp  TestWorldsimParty.h
